<?xml version="1.0" encoding="utf-8"?>

<!-- Layout of [LauncherActivity]. -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutLauncher"
    style="@style/Launcher"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LauncherActivity">

    <!-- Header. -->
    <LinearLayout
        android:id="@+id/linearLayoutHeader"
        style="@style/AppTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Title. -->
        <LinearLayout
            android:id="@+id/linearLayoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTitle"
                style="@style/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="start"
                android:text="@string/app_name" />
        </LinearLayout>

        <!-- Description. -->
        <LinearLayout
            android:id="@+id/linearLayoutDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDescription"
                style="@style/Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="end"
                android:text="@string/app_description" />
        </LinearLayout>
    </LinearLayout>

    <!-- Menu. -->
    <ScrollView
        android:id="@+id/scrollViewMenu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutHeader">

        <LinearLayout
            android:id="@+id/linearLayoutMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start|center_horizontal"
            android:orientation="vertical">

            <!-- Information provider. -->
            <LinearLayout
                android:id="@+id/linearLayoutChooseDifficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewChooseDifficulty"
                    style="@style/ChooseDifficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/difficulty_choose" />
            </LinearLayout>

            <!-- Difficulty level chooser. -->
            <LinearLayout
                android:id="@+id/linearLayoutGameDifficulty"
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start|center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:tag="@string/difficulty_label_1">

                    <Button
                        android:id="@+id/button1"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:onClick="launchNewGame"
                        android:tag="@string/difficulty_label_1"
                        android:text="@string/difficulty_level_1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:tag="@string/difficulty_label_2">

                    <Button
                        android:id="@+id/button2"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:onClick="launchNewGame"
                        android:tag="@string/difficulty_label_2"
                        android:text="@string/difficulty_level_2" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:tag="@string/difficulty_label_3">

                    <Button
                        android:id="@+id/button3"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:onClick="launchNewGame"
                        android:tag="@string/difficulty_label_3"
                        android:text="@string/difficulty_level_3" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout0"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:tag="@string/difficulty_label_0">

                    <Button
                        android:id="@+id/button0"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:onClick="launchNewGame"
                        android:tag="@string/difficulty_label_0"
                        android:text="@string/difficulty_level_0" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
